# starry

./: .gitattributes  .gitignore  README.md  starry.sln
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: reading.py
backend/app/routers/: reading.py
backend/app/services/: ai_service.py  card_loader.py
backend/tests/: test_reading.py
card_pipeline/data/: minor_arcana.json  workflow_flux_schnell.json
card_pipeline/scripts/: apply_frame.py  generate_minor.py  optimize_deck.py
client/Assets/Animaitions/: Main Camera.controller  New Animation.anim
client/Assets/Character/: Peasant Girl.fbx
client/Assets/Character/animations/: Asking Question.fbx  Beckoning.fbx  Clapping.fbx  Pointing.fbx  Seated Idle.fbx  Talking.fbx  TarotMasterController.controller  Writing.fbx
client/Assets/Props/Materials/: M_ConstellationLine.mat  M_book.mat  M_star.mat
client/Assets/Props/Meshs/: book.fbx  candle.fbx  card_deck.fbx  carpet_floor.fbx  carpet_table.fbx  chair_master.fbx  chair_user.fbx  crystal.fbx  old_carafe.fbx  table.fbx  tent.fbx  wood_furniture01.fbx  wood_furniture02.fbx  wood_shelf.fbx
client/Assets/Resources/: cards_info.json  cards_info_en.json
client/Assets/Scenes/: 01_Splash.unity  02_Main.unity
client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
client/Assets/Shaders/: Star.shader
client/Assets/_Recovery/: 0 (1).unity  0 (2).unity  0 (3).unity  0.unity
client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+46 files in other folders)
